fixed css for h2, which was overlapping on wraparound

--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,7 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-h2 {
-	line-height: 0;
-}
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
